# CNN-C-implementation

./: .gitignore  Makefile  README.md  mnist_processing.py
cnn/: #main.c#  CMakeLists.txt  main.c
cnn/headers/: activation.h  backprop.h  cnn.h  convlayer.h  dense.h  pool.h  utils.h
cnn/implementations/: activation.c  backprop.c  cnn.c  convlayer.c  dense.c  pool.c  utils.c
web/src/: App.tsx  utils.ts
web/src/Button/: Button.tsx
web/src/Canvas/: Canvas.css  Canvas.tsx
